--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/router": "~13.0.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.6.1",
-    "rxjs": "~7.4.0",
+    "rxjs": "7.4.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
