--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@fortawesome/angular-fontawesome": "^0.10.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.6.1",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "7.4.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
@@ -37,7 +39,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.4.3",
-    "ngx-webstorage": "9.0.0"
+    "ngx-webstorage": "9.0.0",
+    "typescript": "~4.4.3"
   }
 }
