--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.0.0",
     "@fortawesome/angular-fontawesome": "^0.10.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@tinymce/tinymce-angular": "^6.0.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.6.1",
     "ngx-toastr": "^14.0.0",
