--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
@@ -107,5 +108,7 @@
       }
     }
   },
-  "defaultProject": "redditclone"
+  "cli": {
+    "analytics": false
+  }
 }
