--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2017",
+    "target": "es2020",
     "module": "es2020",
+    "skipLibCheck": true,
     "lib": [
       "es2020",
       "dom"
