--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "redditclone",
   "version": "0.0.0",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "ng": "ng",
     "heroku-postbuild": "ng build --prod && npm install -g http-server-spa",
