Prepare front to product

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   },
   "scripts": {
     "ng": "ng",
-    "heroku-postbuild": "ng build --prod && npm install -g http-server-spa",
+    "heroku-postbuild": "npm run build && npm install -g http-server-spa",
     "start": "http-server-spa dist/angular-reddit-clone index.html $PORT",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
